@@ -3,6 +3,8 @@ Changes made from the "0.6.5" release to the "0.7" release:
 
 * Bertrand Coconnier:
 
+- GLC_TEXTURE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
+  supports them
 - Fixed bug #1834256 (part II) : The configure script now guesses the correct
   flags to use in order to cross-compile QuesoGLC for MinGW32
 - Fixed bug #1834256 (part I) : An option has been added to the build scripts
